@@ -4,6 +4,7 @@ Koan CHANGELOG
 - (DOCS) fix manpage, option is --nogfx, not --no-gfx
 - (FEAT) autodetect now works with IP as well as MAC, uses rhpl
 - (FEAT) some conection speedup improvements (WIP)
+- (FEAT) /usr/bin/cobbler-register for registration to cobbler server!
 
 - XXX 1.4.3
 - (SPEC) reduce python version requirements for EL2 (--replace-self only)
